--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,6 +1,9 @@
 browser = chrome
 url = https://practicesoftwaretesting.com
 
+email = toffee123@gmail.com
+password = DuubDub$26
+
 headless = false
 incognito = false
 
