--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,14 +1,14 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=target/ExtentReports/ToolShop.html
+extent.reporter.spark.out=target/ExtentReports/ToolShop Automation Test Extent-Report.html
 extent.reporter.spark.config=src/test/resources/spark-config.xml
 extent.reporter.spark.enable.device=true
 extent.reporter.spark.enable.author=true
 extent.reporter.spark.prefix.device=@device_
-extent.reporter.spark.prefix.author=@author_
+extent.reporter.spark.prefix.author=@Author_
 extent.reporter.spark.vieworder=dashboard,test,category,device,author,exception
 extent.reporter.spark.base64imagesrc=false
 
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=target/ExtentReports/ToolShop.pdf
-screenshot.dir=screenshot/
-screenshot.rel.path=../../screenshot/
+extent.reporter.pdf.out=target/ExtentReports/ToolShop Automation Test PDF-Report.pdf
+screenshot.dir=target/screenshot/
+screenshot.rel.path=../../target/screenshot/
